Finish post, put, delete methods and update openapi
